# torchdcm-paper

./: .gitignore  BENCHMARK_SYSTEM.md  README.md  pyproject.toml
benchmarks/: compare_advanced_estimators.py  compare_advanced_likelihoods.py  compare_biogeme.py  compare_biogeme_public_mnl.py  compare_covariate_scaled_mnl_estimators.py  compare_generated_choice_battery.py  compare_latent_class_estimators.py  compare_mixed_logit_estimators.py  compare_mnl_estimators.py  compare_nhts_mnl.py  compare_ordered_estimators.py  compare_real_mixed_logit_battery.py  compare_real_nested_logit_battery.py  compare_synthetic_ordered_probit.py  mnl_generic_backends.py  run_advanced_full_suite.py  run_estimator_benchmark_suite.py  run_public_mnl_battery.py  run_real_mixed_logit_isolated.py  run_real_nested_logit_isolated.py  run_real_ordered_probit_battery.py  run_solver_attempt_matrix.py  summarize_ordered_results.py
datasets/: README.md  VALIDATION.md  dataset_index.csv  dataset_manifest.json  download_public_datasets.py
datasets/large/: README.md  google_drive_links.csv
datasets/small/: README.md  small_datasets.csv
docs/: benchmarking.md  data.md  dcm-package-benchmark-landscape.md  ijoc-software-paper-plan.md  model-family-benchmark-comparison.md  synthetic-controlled-benchmarks.md
paper/: Makefile  README.md  main.tex  references.bib
scripts/: materialize_dataset_release.py  process_lpmc_london.py  render_model_family_benchmark.py  run_synthetic_controlled_mnl_benchmark.py
tests/: test_biogeme_parity.py
validation/: BENCHMARK_SYSTEM.md  README.md
(+116 files in other folders)
